assets/css/style.css
/* ... */
.volcano-button::after {
    content: "Volcano";
}

.jungle-button::after {
    content: "Jungle";
}

.ocean-button::after {
    content: "Ocean";
}

.earth-button::after {
    content: "Earth";
}

/* Modals */

.rules-modal,
.contact-modals,
.game-modal,
.question-modal,
.results-modal,
.answers-result {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0);
    transition: translate 350ms ease-in-out;
    background-color: #fcfcfc;
    border: 1px solid rgba(0, 0, 0, 0.2);
}

.rules-modal,
.contact-modals,
.game-modal {
    z-index: 10;
}

.question-modal,
.results-modal {
    z-index: 35;
}

.answers-result {
    z-index: 45;
}

.rules-modal,
.contact-modals {
    border-radius: 10px;
    padding: 1em;
    max-height: 80vh;
    overflow-y: scroll;
}

.question-modal {
    border-radius: 5px;
    height: 80%;
    width: 85%;
}

.results-modal {
    width: 80%;
    height: 40%;
    border-radius: 10px;
    padding: 1em;
}

.answers-result {
    padding: 1em;
    border-radius: 5px;
}

#wrong-answer,
#game-over {
    width: 80%;
}

.overlay,
.game-overlay,
.messages-overlay,
.ongame-overlay {
    position: fixed;
    opacity: 0;
    transition: opacity 200ms ease-in-out;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    pointer-events: none;
}

.overlay,
.game-overlay {
    z-index: 5;
}

.ongame-overlay {
    z-index: 30;
}

.messages-overlay {
    z-index: 40;
}

.overlay,
.messages-overlay,
.ongame-overlay {
    background-color: rgba(0, 0, 0, 0.8);
}

.game-overlay {
    background-color: #fcfcfc;
}

.overlay-active {
    opacity: 1;
    pointer-events: all;
}

.modal-active {
    transform: translate(-50%, -50%) scale(1);
}

.modal-header {
    font-size: 1.2rem;
    font-weight: bold;
    padding: 1em;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-transform: capitalize;
}

.results-modal .modal-header {
    font-size: 1rem;
    padding: 0;

}

.close-modal {
    font-size: 2rem;
    font-weight: bold;
    background: none;
    border: none;
}

.close-modal:focus {
    border-radius: 10px;
    box-shadow: 0 0 0 2px red;
}

.close-modal:hover {
    color: red;
}

/* ------------------------------------------------------Navigation */

.logo img {
    margin: 16px;
    box-sizing: border-box;
    border: 0px solid;
    /* Sets a border that doesn't display in order to have a round shaped border without adjusting the image */
    border-radius: 50%;
}

.logo:focus img {
    box-shadow:
        0 0 0 6px white,
        0 0 0 9px black;
}

.logo:hover img {
    box-shadow: 0 0 10px 0 black;
}

.menu-icon {
    position: absolute;
    top: 0px;
    right: 10px;
    margin: 16px;
    border: none;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    background-color: #d9cb11;

    transition-duration: 350ms;
    -o-transition-duration: 350ms;
    -ms-transition-duration: 350ms;
    -moz-transition-duration: 350ms;
    -webkit-transition-duration: 350ms;
    transition-property: background-color;
    -o-transition-property: background-color;
    -ms-transition-property: background-color;
    -moz-transition-property: background-color;
    -webkit-transition-property: background-color;
}

.menu-icon:focus {
    box-shadow:
        0 0 0 6px white,
        0 0 0 9px #d9cb11;
}

.menu-icon:hover {
    background-color: #9941bf;
}

.menu-icon:hover .menu-text {
    color: #d9cb11;
}

.menu-text {
    position: relative;
    top: -12px;
    color: #9941bf;
    font-family: "Fredoka One", cursive;
    font-size: 0.8rem;
    letter-spacing: 0.03rem;
}

.navigation-menu {
    position: absolute;
    top: 65px;
    right: 12px;
    padding: 5px 10px;
    margin: 15px 10px;
    background-color: #d9cb11f2;
    border-radius: 5px;
    transform: scale(0);
    transition: transform 300ms ease-in-out;
}

.menu-active {
    transform: scale(1);
}

.navigation-list {
    margin: 0;
    padding: 3px;
    list-style: none;
    text-align: right;
}

.navigation-items {
    padding: 3px 0;
}

.navigation-links {
    padding: 5px;
    color: #9941bf;
    border-radius: 5px;
}

.navigation-links:focus {
    background-color: #9941bf;
    color: #d9cb11;
}

.navigation-links:hover {
    text-decoration: underline 2px #9941bf;
}

/* ------------------------------------------------------Footer */

.footer {
    position: absolute;
    height: 40px;
    bottom: 0;
    left: 0;
    width: 100%;
    margin: 0.3em 0 0;
    background-color: #d9cb11b3;
}

.copyright,
.footer-links {
    position: absolute;
    display: inline-block;
    padding: 0.3em;
}

.copyright {
    left: 10%;
    top: 50%;
    transform: translateY(-55%);
    font-size: 0.7rem;
}

.footer-links {
    right: 10%;
    top: 50%;
    transform: translate(0, -50%);
    font-size: 1rem;
}

.footer-links a {
    text-decoration: none;
    margin-left: 0.6em;
    color: #9941bf;
}

.footer-links i {
    height: 1.8em;
    width: 1.8em;
    border-radius: 50%;
    line-height: 1.8em;
    transition-duration: 350ms;
    -o-transition-duration: 350ms;
    -ms-transition-duration: 350ms;
    -moz-transition-duration: 350ms;
    -webkit-transition-duration: 350ms;
    transition-property: background-color, color;
    -o-transition-property: background-color, color;
    -ms-transition-property: background-color, color;
    -moz-transition-property: background-color, color;
    -webkit-transition-property: background-color, color;
}

.footer-links a:focus i {
    box-shadow:
        0 0 0 2px white,
        0 0 0 4px black;
}

.footer-links a:hover i {
    background-color: #9941bf;
    color: #d9cb11;
}

/* ------------------------------------------------------Home page */

.home-wrapper {
    min-height: 100vh;
    position: relative;
}

/* Heading */
.home-heading {
    margin-bottom: 0px;
    font-size: 3rem;
}

.home-heading+span {
    margin-top: 0.3em;
    font-size: 1.6rem;
}
/* ... */

